bug/7: fixed modal view on mobile devices

--- a/src/components/InfoBlock/index.scss
+++ b/src/components/InfoBlock/index.scss
@@ -2,7 +2,7 @@
 
 .info-block {
   color: $grey;
-  margin-top: 30px;
+  margin: 30px 0 15px;
   width: 100%;
   font-size: 22px;
   display: flex;
